--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,18 +18,12 @@
 </resource-ref>
 
  <filter>
-  	<filter-name>SetCharEncoding</filter-name>
-  	<filter-class>
-  	org.apache.catalina.filters.SetCharacterEncodingFilter
-  	</filter-class>
-  	<init-param>
-  		<param-name>encoding</param-name>
-  		<param-value>utf-8</param-value>
-  	</init-param>
-  </filter>
-  <filter-mapping>
-  	<filter-name>SetCharEncoding</filter-name>
-  	<url-pattern>/*</url-pattern>
-  </filter-mapping>
+	<filter-name>CharConfig</filter-name>
+	<filter-class>config.CharConfig</filter-class>
+</filter>
+<filter-mapping>
+	<filter-name>CharConfig</filter-name>
+	<url-pattern>/*</url-pattern>
+</filter-mapping>
 
 </web-app>
